# git-status-tracker

./: Cargo.toml  LICENSE  README.md
src/: main.rs
