[package]
edition = "2021"
name = "git-status-tracker"
version = "3.0.0"
description = "a small cli for saving and retrieving git information for status lines"
license = "MIT"
documentation = "https://github.com/icub3d/git-status-tracker"
homepage = "https://github.com/icub3d/git-status-tracker"


[dependencies]
bincode = "1.3.3"
dirs = "4.0.0"
serde_json = "1.0.59"
sled = "0.34.7"

[dependencies.clap]
features = ["derive"]
version = "3.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"
